HW 5.1 SpringJdbcTemplate